<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valentyne.pc_controller.KeyboardActivity">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="224dp"
        android:layout_marginStart="25dp"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_1"
        android:layout_toStartOf="@+id/btn_3"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_2"
        android:layout_toLeftOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_1"
        android:layout_toStartOf="@+id/btn_4"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_3"
        android:layout_toLeftOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_2"
        android:layout_toStartOf="@+id/btn_5"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_4"
        android:layout_toLeftOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_2"
        android:layout_toStartOf="@+id/btn_6"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_5"
        android:layout_toLeftOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_2"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_6" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_1"
        android:layout_toEndOf="@+id/btn_6"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_7"
        android:layout_toRightOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_1"
        android:layout_toStartOf="@+id/btn_0"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_9"
        android:layout_toLeftOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_1"
        android:layout_marginEnd="58dp"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="58dp" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="@dimen/NUMBER_BUTTON_WIDTH"
        android:layout_height="@dimen/NUMBER_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_7"
        android:layout_toStartOf="@+id/btn_9"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_8"
        android:layout_toRightOf="@+id/btn_7"
        android:layout_toLeftOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_a"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_e"
        android:layout_toLeftOf="@+id/btn_s"
        android:text="@string/btn_a" />

    <Button
        android:id="@+id/btn_b"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_4"
        android:text="@string/btn_b"
        android:layout_toRightOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_z"
        android:layout_toEndOf="@+id/btn_2"
        android:text="@string/btn_c"
        android:layout_toRightOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_d"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_4"
        android:text="@string/btn_d"
        android:layout_toRightOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_3"
        android:text="@string/btn_e"
        android:layout_toRightOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_f"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_f" />

    <Button
        android:id="@+id/btn_g"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_6"
        android:text="@string/btn_g"
        android:layout_toRightOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_h"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_7"
        android:text="@string/btn_h"
        android:layout_toRightOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_i"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignStart="@+id/btn_9"
        android:layout_below="@+id/btn_2"
        android:text="@string/btn_i"
        android:layout_alignLeft="@+id/btn_9" />

    <Button
        android:id="@+id/btn_j"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignStart="@+id/btn_9"
        android:layout_alignTop="@+id/btn_a"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_j"
        android:layout_alignLeft="@+id/btn_9" />

    <Button
        android:id="@+id/btn_k"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_9"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_k"
        android:layout_toRightOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_l"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_marginStart="-58dp"
        android:layout_toEndOf="@+id/btn_0"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_l"
        android:layout_marginLeft="-58dp"
        android:layout_toRightOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_z"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_a"
        android:layout_toStartOf="@+id/btn_2"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_z"
        android:layout_toLeftOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_x"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_z"
        android:layout_toRightOf="@id/btn_z"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_x" />

    <Button
        android:id="@+id/btn_v"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_c"
        android:layout_toEndOf="@+id/btn_3"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_v"
        android:layout_toRightOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_n"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_a"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_n" />

    <Button
        android:id="@+id/btn_m"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_6"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_m"
        android:layout_toRightOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_o"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_9"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_o"
        android:layout_toRightOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_p"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_marginStart="-58dp"
        android:layout_toEndOf="@+id/btn_0"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_p"
        android:layout_marginLeft="-58dp"
        android:layout_toRightOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_u"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_7"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_u"
        android:layout_toRightOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_y"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_6"
        android:layout_toRightOf="@+id/btn_6"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_y" />

    <Button
        android:id="@+id/btn_t"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_t" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_4"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_r"
        android:layout_toRightOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_w"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_below="@+id/btn_2"
        android:layout_toEndOf="@+id/btn_2"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_w"
        android:layout_toRightOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_q"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignStart="@+id/btn_2"
        android:layout_below="@+id/btn_2"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_q"
        android:layout_alignLeft="@+id/btn_2" />

    <Button
        android:id="@+id/btn_s"
        android:layout_width="@dimen/ALPHABET_BUTTON_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignTop="@+id/btn_a"
        android:layout_toEndOf="@+id/btn_3"
        android:padding="@dimen/BUTTON_PADDING"
        android:text="@string/btn_s"
        android:layout_toRightOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_caps"
        android:layout_width="@dimen/CAPSLOCK_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignEnd="@+id/btn_2"
        android:layout_alignTop="@+id/btn_a"
        android:text="@string/caps"
        android:layout_alignRight="@+id/btn_2" />

    <Button
        android:id="@+id/btn_tab"
        android:layout_width="@dimen/CAPSLOCK_WIDTH"
        android:layout_height="@dimen/ALPHABET_BUTTON_HEIGHT"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_2"
        android:text="Button"
        tools:text="@string/tab"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
